# MiMA

./: .gitignore  @  CITATION.cff  CMakeLists.txt  Dockerfile  builder.def  mima.def  mppnccombine.def
.devcontainer/: devcontainer.json
.github/workflows/: build_intel.yml  cmake-single-platform.yml
cmake/: FindNetCDF.cmake
exp/: Makefile  compile_command.txt  compilescript_SE3Mazama.bs  compilescript_mac.sh  compilescript_module.bs  compilescript_sherlock.sh  mkmf.template.apple  path_names  path_names_sub
input/: diag_table  input.nml  input_old.nml  namelists
input/INPUT/: explore_lmask.py
input_old/: input.nml
postprocessing/: mppnccombine.c
src/atmos_coupled/: CMakeLists.txt
src/atmos_param/: CMakeLists.txt  wavenet.py
src/atmos_param/cg_drag/: cg_drag.f90
src/atmos_param/cg_drag_king/: cg_drag_king.f90
src/atmos_param/damping_driver/: damping_driver.f90
src/atmos_param/dd_drag/: dd_drag.F90  dd_drag_legacy.F90  dd_drag_test.f90  wavenet_2.f90
src/atmos_param/diag_integral/: diag_integral.f90
src/atmos_param/qflux/: qflux.f90
src/atmos_param/topo_drag/: topo_drag.f90
src/atmos_shared/: CMakeLists.txt
src/atmos_shared/interpolator/: interpolator.F90
src/atmos_spectral/: CMakeLists.txt
src/atmos_spectral/driver/solo/: atmosphere.f90
src/atmos_spectral/model/: spectral_dynamics.f90
src/coupler/: CMakeLists.txt
src/ice_param/: CMakeLists.txt
src/shared/: CMakeLists.txt
src/shared/diag_manager/: diag_output.f90
src/shared/field_manager/: field_manager.F90
src/shared/memutils/: memuse.c
src/shared/mpp/: mpp.F90  mpp_io_misc.F90  mpp_util.F90
src/shared/mpp/include/: mpp_comm_mpi.inc  mpp_comm_nocomm.inc  mpp_comm_sma.inc  mpp_util_mpi.inc  mpp_util_nocomm.inc  mpp_util_sma.inc
src/shared/time_interp/: time_interp_external.F90
